--- a/section-38.adoc
+++ b/section-38.adoc
@@ -99,13 +99,13 @@ must roll for each squadron undergoing refit. If planes not belonging to that
 squadron undergo,a refit attempt, they are rolled for separately from the rest
 of the squadron. The Player simply determines the number of aircraft in the
 squadron undergoing refit and throws one die, making any adjustments (see Case
-<<38_35>> and consulting the Aircraft Refit Table  <<38_38>>. The table gives
-him the percentage of planes successfully refitted. (Round all fractions up.)
+<<38_35>>) and consulting the Aircraft Refit Table  <<38_38>>. The table gives
+him the percentage of planes successfully refitted. (Round all fractions up).
 
 [#38_35]*[38.35]* When rolling for refit, the Player adds one to his die roll if
 the planes do not belong to the squadron attempting the refit. If the planes at
 tempting refit are Italian, the Player (be he Axis or Commonwealth) adds two to
-the dieroll. If the planes are German, add one to the dieroll. The affects may
+the dieroll. If the planes are German, add one to the dieroll. The effects may
 be cumulative.
 
 [#38_36]*[38.36]* For every squadron undergoing an attempted refit — whether
@@ -125,7 +125,7 @@ be flown. Players should distribute this effect as equally as possible.
 accurate, method of refitting planes may roll for each plane individually. The
 Player, in this case, rolls two dice. The Commonwealth Player refits a plane on
 a roll of 2 through 8; the Axis Player refits German planes on a roll of 2-7,
-the Italian planes on 2-6. The effects of Case” <<38_35>>are increased to adding
+the Italian planes on 2-6. The effects of Case <<38_35>> are increased to adding
 two to the diceroll to account for the "wrong" squadron.  (This was, with some
 minor variations, the method used by the Playtesters. I can't truthfully say
 they lovedit...).
@@ -144,7 +144,7 @@ restrictions as applied to refueling.  Ammunition comes from the air facility
 [#38_43]*[38.43]* Each squadron requires one Ammunition Point to allow its
 planes to use their TacAir Rating. If that point is not supplied, each plane has
 a TacAir Rating of zero and may not fire at any Enemy planes (see Case
-<<46_21>>.
+<<46_21>>).
 
 [#38_44]*[38.44]* For bomb tonnage, one Ammunition Point is required for all
 bombs loaded onto a plane. Thus a bomber with a tonnage capacity of 15 would
@@ -159,4 +159,4 @@ unused after an abort they were often dropped in the sea or into the desert).
 Composition Sheet.
 
 [#38_47]*[38.47]* The cost in Ammo Points to load a bomber with mines (see Case
-<<41_39>> or torpedoes (see Case <<41_7>> is one Point.
+<<41_39>>) or torpedoes (see Case <<41_7>>) is one Point.
